--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -22,7 +22,7 @@ affiliation:
     institution   : "Program in Statistical and Data Sciences, Smith College"
 
 authornote: |
-  Randi L. Garcia is in the Psychology Department and the Statitsical and Data Sciences program at Smith College.
+  Randi L. Garcia is in the Psychology Department and the Program in Statistical and Data Sciences at Smith College.
 
   The data that support the findings of this study are available on request from the corresponding author. The data are not publicly available due to privacy or ethical restrictions.
 
@@ -73,7 +73,7 @@ library(xtable)
 library(kableExtra)
 library(rmarkdown)
 ```
-@robertsfredrickson's Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a perceived or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my]. What are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. However, this research has largely focused on mixed-gender interactions only. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO focuses on understanding mixed-gender interactions, acknowledging the patriarchal power structure embedded in these mixed interactions, but can this model be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
+@robertsfredrickson's Objectification Theory suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women have been theorized to be the strongest under the "male gaze," that is, when it is a perceived or actual man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my]. What are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women have in recent years explored the interpersonal process of the objectification, finding evidence for *self*-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification; @strelan2018birds; @riemer2020self]. However, this research has largely focused on mixed-gender interactions only. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO). The SIMO focuses on understanding mixed-gender interactions, acknowledging the patriarchal power structure embedded in these mixed interactions, but can this model be extended to interactions among women? Although there is evidence that women can objectify other women [@loughnan2015exploring; @puvia2013being; @gervais2013my], studies investigating the process of interpersonal objectification in interactions between women is scarce. 
 
 The current study uses the face-to-face interaction methodology deployed in @garcia2016objectification to begin to answer a series of research questions about interpersonal objectification among women: Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study addresses these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
 
@@ -700,21 +700,21 @@ Although the current study did not find a connection between SSO and authenticit
 ##Limitations and Future Directions
 
 ###Sample Characteristics
-Although the sample size was relatively small, due to the difficulty in collecting data on actual interpersonal encounters, we believe that the results from the current analyses are important and push work in interpersonal objectification forward in an important way. Of course, more data is better, especially for evaluating null results. Follow-up studies investigating interpersonal objectification among women are necessary and should strive for larger samples. In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of mostly women from Western cultures. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring], research on objectification that includes people from non-Western cultures has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring, @wollast2020cultural]. 
+Although the sample size was relatively small, due to the difficulty in collecting data on actual interpersonal encounters, we believe that the results from the current analyses are important and push work in interpersonal objectification forward in an important way. Of course, more data is better, especially for evaluating null results. Follow-up studies investigating interpersonal objectification among women are necessary and should strive for larger samples. In addition to being relatively small and combined across two institutions, another limitation of the current study sample is that the it was comprised of mostly women from Western cultures. Being that self-objectification has been found to be most prevalent in Western culture [@loughnan2015exploring], research on objectification that includes people from non-Western cultures has been scarce [@moradi2008], although more recent work has examined objectification from a cross-cultural framework [@loughnan2015exploring; @wollast2020cultural]. 
 
 Further, sexualizing experiences and self-objectification are thought to begin a very young age, but researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014]. The mean age of the current sample was `r mean_age` years, a young adult sample, limiting the generalizability of our results to this age group. More longitudinal studies investigating the developmental experience of interpersonal objectification and self-objectification are recommended, especially because the processes of self-objectification have been found to unfold between the periods of adolescence and young adulthood [@vangeel2018multidimensional]. 
 
-The current sample contained a mixture of both heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that the heterosexual women in our sample were able to do this with other women as their target---indeed, there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---but, perhaps they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). Social comparison processes have been linked to self-objectification and negative body image among women in general [@tylka2010integrating, @lindner2012social] and, more recently, specifically with regard to consumption of social media site content [@hanna2017contributions, @fox2016selective, @feltman2018instagram]. However, these none of these studies compared heterosexual women to non-heterosexual women. If it is the case that there are two differential psychological processes between heterosexual and lesbian women at play, this added variance might have served to dampen our ability to detect the proposed relationships between study variables.
+The current sample contained a mixture of both heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that the heterosexual women in our sample were able to do this with other women as their target---indeed, there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---but, perhaps they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). Social comparison processes have been linked to self-objectification and negative body image among women in general [@tylka2010integrating; @lindner2012social] and, more recently, specifically with regard to consumption of social media site content [@hanna2017contributions; @fox2016selective; @feltman2018instagram]. However, these none of these social comparison studies compared heterosexual women to non-heterosexual women. If it is the case that there are two differential psychological processes between heterosexual and lesbian women at play, this added variance might have served to dampen our ability to detect the proposed relationships between study variables.
 
 <!-- Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [@siever1994sexual; @strong2000eating], lower body surveillance [@hill2008examining], and lower self-objectification [@noffsinger2004objectification]. However none of these studies examined the relationship between self-objectification and experiences of sexual objectification. Thus, it is unclear whether lesbian women indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Consistent with previous research, @hill2008examining determined that lesbians exhibited less physical appearance concerns compared to heterosexual women, however there was no evidence found that lesbian women self-objectify less than heterosexual women and they did not find that sexual orientation moderates the relationship between sexual objectification and self-objectification. This evidence sits in contrast to older theoretical literature that suggests that lesbians internalize cultural sexual objectification less than do heterosexual women [@brown1987lesbians; @pitman1999body; @rothblum1994lesbians; @siever1994sexual].  -->
 
-An additional issue with including both heterosexual and lesbian women in the sample is that the interpersonal encounter in the current study was experience as a potentially romantic context for some and as a strictly platonic context for others. Interpersonal sexual objectification has been studied in both romantic and platonic contexts. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Evidence is the romantic context is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within established romantic relationships [@meltzer2020women]. Less is known about first dates and there is little research on objectification processes in lesbian relationships specifically. Further, objectification might also occur among platonic friends: Perhaps women could be amplifying each others' state self-objectification *before* the theoretical encounters with men organized in the SIMO occur. 
+An additional issue with including both heterosexual and lesbian women in the sample is that the interpersonal encounter in the current study was experience as a potentially romantic context for some and as a strictly platonic context for others. Interpersonal sexual objectification has been studied in both romantic and platonic contexts. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Evidence is the romantic context is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within established romantic relationships [@meltzer2020women]. Less is known about first dates and there is little research on objectification processes in lesbian relationships specifically. Further, objectification might also occur among platonic friends: Perhaps women could be amplifying each others' state self-objectification *before* the theoretical encounters with men, and the processes organized in the SIMO, occur. 
 
 <!-- ###Sexism and Sexual Discrimination -->
 <!-- Sexism has been found to be related to the objectification of women, but not men [@cikara2011agents; @harsey2020men], and in addition, TSO has been found to be associated with less negative attitudes towards sexual harassment [@bernard2018bodies]. Both of these effects are present for both men and women. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification of women has also been linked to trauma [@miles2015stop]. Sexual objectification occurs in a myriad of ways in women's lives and is modified by unique combinations of race, ethnicity, sexuality, age, and class [@robertsfredrickson]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. -->
 
 #Conclusion
-To the best of our knowledge, this was the first study to test the relationship between objectification and self-objectification within actual interpersonal interactions among women. The results of this study replicated the partner effect of other-objectification on state self-objectification found in @garcia2016objectification in a sample of same-gender pairs all identifying as women. That is, the more a woman's female interaction partner reported having objectified her, the more she reported a state of self-objectification during the interaction. Unlike past research finding that trait self-objectification moderated this relationship, we did not find any evidence of such an effect. Further, we did not find that inauthenticity was an important mediating factor between self-objectification and the negative psychological and social consequences of such objectification for women’s, as was the case in past studies on interpersonal objectification of women by men. Further research should be conducted with larger samples that investigate interpersonal objecticiation among women and compare these processes to parallel processes among mixed-gender dyads. 
+To the best of our knowledge, this was the first study to test the relationship between objectification and self-objectification within actual interpersonal interactions among women. The results of this study replicated the partner effect of other-objectification on state self-objectification found in @garcia2016objectification in a sample of same-gender pairs all identifying as women. That is, the more a woman's female interaction partner reported having objectified her, the more she reported a state of self-objectification during the interaction. Unlike past research finding that trait self-objectification moderated this relationship, we did not find any evidence of such an effect. Further, we did not find that inauthenticity was an important mediating factor between self-objectification and the negative psychological and social consequences for women objectified by women, as was the case in past studies on interpersonal objectification of women by men. Further research should be conducted with larger samples that investigate interpersonal objecticiation among women and compare these processes to parallel processes among mixed-gender dyads. 
 
 \newpage
 
