--- a/references.bib
+++ b/references.bib
@@ -352,7 +352,7 @@ doi = {10.1177/1069072707301211}
 }
 
 @article{saguyetal2010,
-author = {Saguy, Tamar and Quinn, Diane and F Dovidio, John and Pratto, Felicia},
+author = {Saguy, Tamar and Quinn, Diane and Dovidio, John and Pratto, Felicia},
 year = {2010},
 month = {02},
 pages = {178-82},
